--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.security.user.name=Admin
 spring.security.user.password=1234
+
+google.news.api.key=e3a468dece754f93896ee7b912c87442
