--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
-spring.security.user.name=Admin
-spring.security.user.password=1234
+spring.security.employee.name=Admin
+spring.security.employee.password=1234
 
 google.news.api.key=e3a468dece754f93896ee7b912c87442
 
