--- a/Client/package.json
+++ b/Client/package.json
@@ -15,7 +15,8 @@
     "@fullcalendar/daygrid": "^6.1.19",
     "@fullcalendar/interaction": "^6.1.19",
     "@fullcalendar/react": "^6.1.19",
-    "bootstrap": "^5.3.7",
+    "@fullcalendar/timegrid": "^6.1.19",
+    "bootstrap": "^5.3.8",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
