--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=SmartNewsHub
-spring.datasource.url=jdbc:postgresql://localhost:5432/News
+spring.datasource.url=jdbc:postgresql://localhost:5432/TaskTracker
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -9,5 +9,3 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.security.user.name=Admin
 spring.security.user.password=1234
-
-google.news.api.key=e3a468dece754f93896ee7b912c87442
