--- a/Front/package.json
+++ b/Front/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.19",
+    "@fullcalendar/daygrid": "^6.1.19",
+    "@fullcalendar/interaction": "^6.1.19",
+    "@fullcalendar/react": "^6.1.19",
     "bootstrap": "^5.3.8",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.1",
