--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=ModuleTaskMenadger
-spring.datasource.url=jdbc:postgresql://localhost:5432/TaskTracker
+spring.datasource.url=jdbc:postgresql://localhost:5432/TestDB
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
