--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=ModuleTaskMenadger
 spring.datasource.url=jdbc:postgresql://localhost:5432/TaskTracker
+app.jwt.secret=???????????????????????????????????JWT
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
